iOS skyline fix and spacing in contact section

--- a/css/main.scss
+++ b/css/main.scss
@@ -418,6 +418,7 @@ html,
 
 .contact {
   color: $white;
+  justify-content: space-around;
   min-height: 75vh;
   position: relative;
 
@@ -541,7 +542,7 @@ html,
     bottom: 0;
     left: 0;
     min-width: 900px;
-    position: absolute;
+    position: fixed;
     width: 100%;
   }
 
